Oprettelse af basic profilside

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -60,7 +60,7 @@ $colors: (
 // --------------------------------------------------
 // Windows only Sass variables can go here
 
-
+$toolbar-background: #338BFF;
 
 
 // App Theme
