--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -12,5 +12,18 @@
     }
 
   }
+  .infoButton{
+      width:110px;
+      height:100px;
+      display:inline-block;
+      font-family:Arial, "Helvetica", sans-serif;
+      background: rgb(66, 184, 221);
+      margin: 10px;
+      font-weight:bold;
+
+  }
+  .infoButton{
+    align: left;
+  }
 
 }
